2008-10-30  Glenn Morris  <rgm@gnu.org>

	* files.el (locate-dominating-stop-dir-regexp): Fix typo.

2008-10-29  Chong Yidong  <cyd@stupidchicken.com>

	* electric.el (Electric-pop-up-window): Don't shrink the window if
	it's already big enough.

	* minibuffer.el (delete-minibuffer-contents): Delete all
	minibuffer contents instead of just the current field.

	* tmm.el (tmm-get-keymap): Handle case where keyseq cache is
	omitted.

	* bookmark.el (bookmark-handle-bookmark): Rename from
	bookmark-jump-noselect.
	(bookmark--jump-via, bookmark-insert): Callers changed.
	(bookmark-jump-noselect): Wrapper function for
	bookmark-handle-bookmark.
	(bookmark-get-bookmark-record): Signal error for invalid bookmark.

	* textmodes/ispell.el (ispell-word): Use use-region-p.

2008-10-29  Juanma Barranquero  <lekktu@gmail.com>

	* tooltip.el (tooltip-functions): Rename from `tooltip-hook',
	to follow naming conventions for abnormal hooks.  Doc fix.
	(tooltip-mode, tooltip-timeout): Use it.
	(tooltip-hook): New obsolete alias.
	(tooltip-help-tips): Doc fix.

	* progmodes/gud.el (gud-tooltip-mode): Use `tooltip-functions'.

2008-10-29  Ulrich Mueller  <ulm@gentoo.org>

	* server.el (server-socket-dir): Use TMPDIR (default /tmp) instead
	of hardcoded /tmp.

2008-10-29  Glenn Morris  <rgm@gnu.org>

	* net/xesam.el (dbus-get-unique-name, dbus-debug): Declare.

	* vc-hooks.el (vc-find-root): Remove bogus alias.

2008-10-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/quail.el (quail-show-guidance): Don't create
	a guidance-frame if current buffer is not a minibuffer, since even if
	selected-window is mini-p, the buffer will never be displayed in it, so
	it wil be usable for guidance.

2008-10-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* smerge-mode.el: Require diff-mode at run-time as well.

2008-10-28  Martin Rudalics  <rudalics@gmx.at>

	* vc-cvs.el (vc-cvs-stay-local): Fix typo in choice.
	* vc-hooks.el (vc-stay-local): Likewise.
