@@ -2,6 +2,8 @@
 
 	* files.el (locate-dominating-stop-dir-regexp): Fix typo.
 
+	* resume.el: Move to obsolete/.
+
 2008-10-29  Chong Yidong  <cyd@stupidchicken.com>
 
 	* electric.el (Electric-pop-up-window): Don't shrink the window if
